--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,15 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
+Select User
+<form action="users">
+    <select size="1" name="userId">
+        <option value="1" selected>1</option>
+        <option value="2">2</option>
+    </select>
+    <p><input type="submit" value="Login"></p>
+</form>
+
 <ul style="font-size: large">
     <li><a href="users">Users</a></li>
     <li><a href="meals">Meals</a></li>
