Make redirect to meals after User login-in

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,6 +8,7 @@
 <hr>
 Select User
 <form action="users">
+    <input type="hidden" name="isUserLogin" value="true">
     <select size="1" name="userId">
         <option value="1" selected>1</option>
         <option value="2">2</option>
