--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,13 +7,12 @@
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
 Select User
-<form action="users">
-    <input type="hidden" name="isUserLogin" value="true">
+<form method="post" action="users">
     <select size="1" name="userId">
         <option value="1" selected>1</option>
         <option value="2">2</option>
     </select>
-    <p><input type="submit" value="Login"></p>
+    <button type="submit">Login</button>
 </form>
 
 <ul style="font-size: large">
